correct scrollbar

--- a/new.css
+++ b/new.css
@@ -239,7 +239,7 @@
     width: 100%;
     margin-top: 127px;
     display: flex;
-   /* position: fixed; */
+   position: fixed;
    /* list-style: none; */
   
    
@@ -359,7 +359,7 @@
   
   
   .mid-body {
-    border: 2px solid green;
+    /* border: 2px solid green; */
     width: 60%;
     height: 100%;
     /* margin-right: 40px; */
@@ -433,7 +433,7 @@
     background-color: white;
     box-sizing: border-box;
     height: 40px;
-    width: 33%;
+    width: 34%;
     display: flex;
     justify-content: space-between;
     padding: 0px 5px;
@@ -503,21 +503,21 @@
     margin-top: 50px;
     margin-bottom: 30px;
     border-radius: 15px;
-    
+    position: relative;
   
    
    
     
   }
   .teachers-video{
-    /* border: 1px solid green; */
+    border: 1px solid rgb(107, 106, 106);
     box-sizing: border-box;
     border-top-left-radius: 13px;
     border-top-right-radius: 13px;
     border-bottom-right-radius: 13px;
     border-bottom-left-radius: 13px;
-    width: 60%;
-    height: 490px;
+    width: 61.5%;
+    height: 511px;
      box-shadow: 0px 2px 15px 1px rgb(158, 154, 154);
   }
   
@@ -575,6 +575,16 @@
     width: 64%;
     height: 100%;
   }
+  .time-line2{
+    border: 1px solid rgb(119, 118, 118);
+    border-radius: 10px;
+    width: 36.5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 30px;
+  }
   
   .happenings-s {
     border-radius: 11px;
@@ -605,12 +615,12 @@
   }
   
   .heading-point-s{
-    border: 2px solid red;
+    /* border: 2px solid green; */
     font-size: 17px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 60% 11%;   
+    /* display: flex; */
+    /* align-items: center;
+    justify-content: center; */
+    /* margin: 60% 11%;    */
     color: rgb(71, 70, 70);
     font-family: Arial, Helvetica, sans-serif;
   }
@@ -631,11 +641,11 @@
     border-bottom-left-radius: 11px;
   }
   .subjects-video::-webkit-scrollbar {
-    width: 5px;
+    width: 3px;
     }
   
   .subjects-video::-webkit-scrollbar-track {
-    border-radius: 5px;
+    border-radius: 3px;
     background-color: white;
   }
   
@@ -675,27 +685,80 @@
     border-bottom-left-radius: 15px;
   }
   .important-notice{
-    /* border: 2px solid green; */
+    /* border: 12px solid green; */
     margin: 60px 0px;
     width: 100%; 
     display: flex;
     justify-content: space-between;
-   
+   position: relative;
   }
-  .notice-box1{
-    /* border:1px solid black; */
+  .notice-box1-a{
+    border:1px solid rgb(119, 116, 116);
     border-radius: 15px;
     width: 32%;
      height: 510px;
-    box-shadow: 0px 2px 10px 1px rgb(158, 154, 154);
+     box-shadow: 0px 2px 10px 1px rgb(158, 154, 154);
     box-sizing: border-box;
+    overflow: auto;    
+   
   }
-  .top-point{
-    /* border:2px solid green; */
-    height: 35px;
-    margin-top: -20px;
+  .notice-box1-b{
+    border:1px solid rgb(119, 116, 116);
+    border-radius: 15px;
+    width: 32%;
+     height: 510px;
+     box-shadow: 0px 2px 10px 1px rgb(158, 154, 154);
+    box-sizing: border-box;
+    overflow: auto;    
+   
+  }
+
+  .notice-box1-c{
+    border:1px solid rgb(119, 116, 116);
+    border-radius: 15px;
+    width: 32%;
+     height: 510px;
+     box-shadow: 0px 2px 10px 1px rgb(158, 154, 154);
+    box-sizing: border-box;
+    overflow: auto;
+      
+   
+  }
+  .top-point3{
+    /* border:7px solid orange; */
+    background-color: white;
+    width: 300px;
+    height: 45px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    position: absolute;
+    top: -20px;
+    left: 69.5%;
+     z-index: 1;
+  }
+  .top-point2{
+    /* border:7px solid orange; */
+    background-color: white;
+    width: 310px;
+    height: 45px;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: -20px;
+    left: 35%;
+     z-index: 1;
+  }
+  .top-point1{
+    /* border:7px solid orange; */
+    background-color: white;
+    width: 303px;
+    height: 45px;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: -20px;
+    left: 1.5%;
+     z-index: 1;
   }
   .about-class{
     /* border:2px solid red; */
@@ -758,42 +821,77 @@
     overflow: auto;
     
   }
-  .heading-point-b::-webkit-scrollbar {
+  /* .notice-box1-b::-webkit-scrollbar {
+    width: 3px;
+    background-color: rgb(233, 7, 7);
+  }
+  
+  .notice-box1-b::-webkit-scrollbar-track {
+    border-radius: 3px;
+    background-color: rgb(237, 84, 84);
+  }
+  
+  .notice-box1-b::-webkit-scrollbar-thumb {
+    border-radius: 3px;
+    background-color: rgb(181, 178, 178);
+  }
+
+
+
+
+  .notice-box1-c::-webkit-scrollbar {
     width: 5px;
     background-color: white;
   }
   
-  .heading-point-b::-webkit-scrollbar-track {
+  .notice-box1-c::-webkit-scrollbar-track {
     border-radius: 5px;
     background-color: white;
   }
   
-  .heading-point-b::-webkit-scrollbar-thumb {
+  .notice-box1-c::-webkit-scrollbar-thumb {
     border-radius: 5px;
     background-color: rgb(181, 178, 178);
-  }
+  } */
   .heading-point-c{
-    /* border:2px solid red; */
+    /* border:5px solid red; */
     box-sizing: border-box;
     padding: 0px 9px 10px 23px;
-    max-height: 95%;
+     /* max-height: 95%; */
+     width: 100%;
+    margin-top: 30px;
+    animation-name: AutoScroll;
+    animation-duration: 17s;
+    animation-delay: 1s;
+    animation-iteration-count:infinite;
     overflow: auto;
-  
+      }
+  @keyframes AutoScroll{
+    0%{
+      transform: translateY(0%);
+    }
+    100%{
+      transform: translateY(-80%);
+    }
   }
-  .heading-point-c::-webkit-scrollbar {
-    width: 7px;
-    background-color: white;
+  .heading-point-c:hover{
+    animation-name: none;
+  }
+  /* .heading-point-c::-webkit-scrollbar {
+    width: 5px;
+    background-color: rgb(120, 0, 0);
+    
   }
   
   .heading-point-c::-webkit-scrollbar-track {
     border-radius: 5px;
-    background-color: white;
+    background-color: rgb(113, 6, 6);
   }
   
   .heading-point-c::-webkit-scrollbar-thumb {
     border-radius: 5px;
-    background-color: rgb(181, 178, 178);
-  }
+    background-color: rgb(23, 1, 1);
+  } */
   .heading-point-c-1{
     /* border:2px solid green; */
     margin-top: 20px;
@@ -806,6 +904,7 @@
   }
   .heading-bold-point{
     color:rgb(73, 72, 72);
+   
   }
   .heading-point-c-1 i{
     margin-right: 7px;
@@ -818,22 +917,26 @@
     width: 100%;
     height: 900px;
     /* min-width: 450px; */
-    padding: 0px 30px;
+    padding: 10px 30px;
     /* padding-bottom: 50px; */
     margin-bottom: 250px;
     border-radius: 17px;
     background-color: white;
     box-shadow: 0px 2px 15px 1px rgb(182, 176, 176);
+    position: relative;
    
   }
   .heading-point-announsment{
     /* border:2px solid blue; */
-    width: 100%;
+    width: 96%;
     display: flex;
     justify-content: space-between;
     /* padding: 0px 10px; */
     margin-top: -17px;
-   
+   position: absolute;
+   top: -3px;
+   left: 2%;
+
   }
   .announsment-logo{
     /* border: 2px solid black; */
